--- a/common/css/activityDefault.css
+++ b/common/css/activityDefault.css
@@ -2,12 +2,25 @@ body:not([debug="true"]) #firebugIconDiv{
 	display: none; 
 }
 
-.activity_hd{
-	display: none;
+.activity_description {
+    cursor: default;
+    display: block;
+    font-family: inherit;
+    font-size: 12px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    margin-left: 8px;
+    margin-top: -20px;
+	width: 870px;
 }
-
-.activity_description{
-	display: none;
+.activity_hd {
+    color: grey;
+    cursor: default;
+    display: block;
+    font-family: inherit;
+    font-size: 22px;
+    margin-left: 7px;
+    margin-top: 1px;
 }
 
 .furigana_div {
