--- a/Enabling_21_html/css/enabling_21.css
+++ b/Enabling_21_html/css/enabling_21.css
@@ -30,21 +30,22 @@ a:link, a:visited, a:hover, a:active {
 	color:#000000;
 }
 body {background: #f5f5f5; }
+
 #enable21Div {
 	position:relative;
 	margin:0px auto 0px auto;
 	padding:0px;
-	width:892px;
+	width:800px;
 
 	
 }
 
 #topPanel{
 	position:relative;
-	top:5px;
+	top:0px;
 	left:0px;
-	width:892px;
-	height:600px;
+	width:800px;
+	height:534px;
 				background: #f5f5f5; /* Old browsers */
 background: -moz-linear-gradient(top,  #f5f5f5 0%, #f5f5f5 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#f5f5f5)); /* Chrome,Safari4+ */
@@ -65,9 +66,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 
 #bottomPanel{
 	position:relative;
-	top:10px;
+	top:2px;
 	left:0px;
-	width:880px;
+	width:800px;
 }
 #audioPlayer{
 	position:relative;
@@ -97,8 +98,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 	position:relative;
 	top:0px;
 	left:0px;
-	width:892px;
-	height:462px;
+	width:800px;
+	height:418px;
 	margin:0px;
 	padding:0px;
 
@@ -140,7 +141,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 	left:0px;
 	margin:0px;
 	padding:0px;
-	width:892px;
+	width:800px;
 }
 #mapDiv {
 	position:absolute;
@@ -148,8 +149,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 .activeMember {
 	position:absolute;
 	cursor:default;
-	width:160px;
-	height:120px;
+	width:145px;
+	height:109px;
 	
 }
 .noneActiveMember{
@@ -162,16 +163,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 #audioFeedBackPanel
 {
 	position:relative;
-	top:15px;
+	top:3px;
 	left:3px;
-	width:870px;
-	height:116px;
+	width:800px;
+	height:110px;
 }
 #audioPanel {
 	position:relative;
-	top:2px;
-	width:505px;
-	height:116px;
+	top:0px;
+	width:455px;
+	height:110px;
 	float:left;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -212,8 +213,8 @@ box-shadow: 0px -2px 2px 0px rgba(196, 196, 196, 1);
 		position:absolute;
 	top:0px;
 	left:0px;
-	width:892px;
-	height:470px;
+	width:797px;
+	height:418px;
 	margin:0px;
 	padding:0px;
 	background-image:url(../images/transBG.png);
@@ -223,11 +224,11 @@ box-shadow: 0px -2px 2px 0px rgba(196, 196, 196, 1);
 }
 #feedBackPanel {
 	position:relative;
-	left:15px;
-	width:358px;
-		height:116px;
+	left:8px;
+	width:330px;
+		height:110px;
 		margin:0px;
-		padding:8px 0px 0px 8px;
+		padding:0px;
 	float:left;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -251,8 +252,8 @@ box-shadow: 0px -2px 2px 0px rgba(196, 196, 196, 1);
 
 
 #feedBackDiv {
-	width:340px;
-	height:98px;
+	width:328px;
+	height:110px;
 	margin:0px;
 	padding:0px;
 	font-family: 'FuturaMedium';
@@ -296,8 +297,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 #feedbackBottom {
 	position:absolute;
 	width:25px;
-	left:290px;
-	top:65px;
+	left:275px;
+	top:75px;
 	
 }
 #messageFeedBack {
@@ -322,6 +323,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 	width:350px;
 	height:30px;
 	float:right;
+}
+#setDiv {
+	cursor:default;
+	left: 0px;
+	z-index:5;
+	height: 30px;
+	background-color: white;
+	width: 40px;
+	position: relative;
+	top: 0px;
 }
 
 
