--- a/Glossary/styles/Glossary.css
+++ b/Glossary/styles/Glossary.css
@@ -1,82 +1,43 @@
-.activity_description {
-    cursor: default;
-    display: block;
-    font-family: inherit;
-    font-size: 12px;
-    letter-spacing: 2px;
-    margin-bottom: 20px;
-    margin-left: 8px;
-    margin-top: -20px;
-	width: 840px;
-}
-.activity_hd {
-    color: grey;
-    cursor: default;
-    display: block;
-    font-family: inherit;
-    font-size: 22px;
-    margin-left: 7px;
-    margin-top: 1px;
-}
 html body {
     background-color: #F5F5F5;
     color: #444444;
-    font-family: Arial,Helvetica,sans-serif;
     letter-spacing: 2px;
     line-height: 20px;
     -moz-user-select: none;
     -webkit-user-select: none;
 }
-.allTabs>div{clear:both;margin-top:10px;overflow:auto;}
 
 #main{
-	font-family: Arial, Helvetica, sans-serif;
 	position:relative;
 	border: 0px solid red;
+	margin-left: 43px;
 }
 
 #videoStage{
     background-color: grey;
-    height: 240px;
-    left: 515px;
-    position: absolute;
-    width: 320px;
-    top: 0px;
+    height: 128px;
+    width: 199px;
+    position: relative;
+    left: 96px;
+    top: 10px;
 }
 
 #playBtnVideo {
     left: 6px;
+    top: 71px;
     position: absolute;
-    top: 180px;
+    width: 25px;
+    display: none;
 }
 
 #engSelectable .ui-selecting { background: #FECA40; }
-#engSelectable .ui-selected { background: #f6a816; color: white; }
+#engSelectable .ui-selected { background: #D8A037; color: white; }
 #engSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#engSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: 18px; }
-
-#transliSelectable .ui-selecting { background: #FECA40; }
-#transliSelectable .ui-selected { background: #f6a816; color: white; }
-#transliSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transliSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: 18px; }
-
-#transSelectable .ui-selecting { background: #FECA40; }
-#transSelectable .ui-selected { background: #f6a816; color: white; } 
-#transSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transSelectable li { margin: 3px; padding: 0.4em; font-size: 14px; height: 18px; }
+#engSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: 18px; border: 0px; cursor: pointer; background: transparent;}
 
 .ui-tabs-panel{
 	overflow: auto;
 	height: 334px;
-}
-
-#tabs ul {
-    font-size: 12px;
-}
-
-#tabs{
-    height: 470px;
-    width: 495px;
 }
 
 
@@ -85,50 +46,23 @@ html body {
 #engPhraseSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
 #engPhraseSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: 18px; }
 
-#transliPhraseSelectable .ui-selecting { background: #FECA40; }
-#transliPhraseSelectable .ui-selected { background: #F39814; color: white; }
-#transliPhraseSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transliPhraseSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: 18px; }
-
-#transPhraseSelectable .ui-selecting { background: #FECA40; }
-#transPhraseSelectable .ui-selected { background: #F39814; color: white; }
-#transPhraseSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transPhraseSelectable li { margin: 3px; padding: 0.4em; font-size: 16px; height: 18px; }
-
 
 #videoTag {
-    height: 240px;
-    width: 320px;
+    height: 100%;
+    width: 100%;
+    border-radius: 3px;
 }
 
 #engTab{
 	padding: 0px;
-	height: 420px;
+	height: 498px;
+	width: 586px;
+	overflow: auto;
+	float: left;
 }
 
-#transliTab{
-	padding: 0px;
-	height: 420px;
-}
-
-#transTab{
-	padding: 0px;
-	height: 420px;
-}
-
-#phrase_tabs ul {
-    font-size: 9px;
-}
-
-#phrase_tabs {
-    height: 220px;
-    left: 510px;
-    position: absolute;
-    top: 250px;
-    width: 325px;
-}
 .roundCorners {
-	border-radius: 3px 3px 3px 3px;
+	border-radius: 3px;
 }
 .ui-selected {
 	border: solid 1px #989898;
@@ -232,7 +166,8 @@ html body {
     vertical-align: middle;
 }
 #container_setDiv {
-   background-color: transparent;
+	display: none;
+   	background-color: transparent;
 	position: absolute;
 	top: 480px;
     cursor: default;
@@ -282,3 +217,118 @@ html body {
 	float: right;
 }
 
+#snippets{
+	display:none;
+}
+
+.itemInfo{
+    border: 1px solid lightgray;
+	
+    width: 345px;
+    height: 305px;
+    padding: 10px;
+    position: relative;
+    left: 0px;
+    top: 24px;
+    margin: 20px;
+    margin-bottom: 0px;
+}
+
+.itemInfo_English{
+    margin-bottom: 20px;
+	
+    margin-left: 4px;
+    clear: both;
+}
+
+.itemInfo_Transliteration{
+    margin-bottom: 20px;
+	
+    margin-left: 4px;	
+}
+
+.itemInfo_Translation{
+    margin-bottom: 20px;
+	
+    margin-left: 4px;	
+}
+
+#rightColumn{
+    float: left;
+	
+    margin-left: 4px;
+}
+
+#filterBar{
+	
+    width: 997px;
+    height: 109px;
+    border-bottom: 1px grey solid;
+    margin-bottom: 10px;
+}
+
+.filterBtn:hover{
+	background-color: rgb(184, 184, 184);
+}
+
+.filterBtn{
+	cursor: pointer;
+	width: 32px;
+	height: 30px;
+	background-color: #E4E2E2;
+	float: left;
+	text-align: center;
+	border-radius: 2px;
+	margin: 1.6px;
+	padding-top: 13px;
+	color: grey;
+	border: 1px solid grey;
+}
+
+.toggled{
+	background-color: #C99460;
+}
+
+.hidden{
+	display:none;
+}
+
+#filterModuleBar{
+	clear:both;
+	float:left;
+}
+
+#filterTaskBar{
+	float:left;
+}
+
+#filterModuleBarTitle, #filterTaskBarTitle{
+	float:left;
+	padding:20px;
+	color: #BDBDBD;
+}
+
+#glossaryTitle{
+    font-family: FuturaBold;
+    margin-top: 32px;
+    margin-bottom: 18px;
+    font-size: 15px;
+}
+
+.itemInfo_header{
+    margin-top: 7px;
+	
+    height: 35px;
+}
+
+.itemInfo_Item{
+    font-family: FuturaBold;
+	
+    float: left;
+}
+
+.itemInfo_Index{
+    font-family: FuturaBold;
+	
+    float: right;
+}
