--- a/Capstone_01_html/styles/Capstone_01_default.css
+++ b/Capstone_01_html/styles/Capstone_01_default.css
@@ -271,7 +271,7 @@ h1, h2, h3, h4, h5, h6 {
 	position: absolute;
 	top: 0;
 	/* width: 890px; */
-	width: 850px;
+	width: 840px;
 	height: 500px;
 	z-index: 6;
 	border: solid thin gray;
@@ -364,4 +364,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn_prev {
 	right: -3px !important;
+}
+.roundCorners {
+    border-radius: 3px;
 }
