--- a/Enabling_01_html/styles/Enabling_01_dliLearn.css
+++ b/Enabling_01_html/styles/Enabling_01_dliLearn.css
@@ -1,4 +1,3 @@
-
 #setTitle {
     background-image: url("../../common/img/bg_btn_set.png") !important;
     float: left;
@@ -32,12 +31,14 @@
 #clickGuard {
     background-color: lightgray;
     display: none;
-    height: 390px;
+    /* height: 390px; */
+	height: 410px;
     left: 0;
     opacity: 0.3;
     position: absolute;
     top: 0;
-    width: 900px;
+    /* width: 900px; */
+	width: 850px;
     z-index: 10;
 }
 .activity_description {
@@ -48,7 +49,8 @@
     margin-bottom: 20px;
     margin-left: 26px;
     margin-top: -19px;
-	width: 890px;
+	/* width: 890px; */
+	width: 820px;
 }
 .activity_hd {
     color: grey;
@@ -73,15 +75,18 @@ html body {
 	border-radius: 4px 4px 4px 4px;
     float: left;
     height: 180px;
-    margin: 2px 6px -4px 19px;
+    /* margin: 2px 6px -4px 19px; */
+	margin: 2px 6px -4px 10px;
     width: 152px;
 }
 .hidden {
     display: none;
 }
 #setDiv {
-    left: 787px;
-    top: 499px;
+    /* left: 787px; */
+	left: 736px;
+    /* top: 499px; */
+	top: 497px;
     width: 107px;
 }
 .disabledImage {
@@ -140,7 +145,8 @@ html body {
     left: 5px;
     top: 5px;
     position: absolute;
-    width: 550px;
+    /* width: 550px; */
+	width: 510px;
 }
 #dragBubbles {
     background-image: url("../../common/img/bg_grip_pattern.png");
@@ -149,7 +155,8 @@ html body {
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
     height: 347px;
-    left: 572px;
+    /* left: 572px; */
+	left: 522px;
     padding: 5px;
     position: absolute;
     top: 5px;
@@ -172,7 +179,8 @@ html body {
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 4px #BDBDBD;
     display: block;
-    left: 20px;
+    /* left: 20px; */
+	left: 17px;
     max-height: 170px;
     min-height: 170px;
     padding: 20px;
