--- a/Enabling_02_html/styles/enabling_02_dlilearn.css
+++ b/Enabling_02_html/styles/enabling_02_dlilearn.css
@@ -97,7 +97,23 @@
     width: 635px;
     z-index: 166;
 }
-
+.activity_description {
+    display: block;
+    font-family: inherit;
+    font-size: 12px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    margin-left: 26px;
+    margin-top: -19px;
+}
+.activity_hd {
+    color: grey;
+    display: block;
+    font-family: inherit;
+    font-size: 22px;
+    margin-left: 26px;
+    margin-top: -2px;
+}
 html body {
     background-color: #F5F5F5;
     color: #444444;
