--- a/Enabling_08_html/styles/Enabling_08_dliLearn.css
+++ b/Enabling_08_html/styles/Enabling_08_dliLearn.css
@@ -108,7 +108,8 @@
     opacity: 0.2;
     position: absolute;
     top: 0;
-    width: 915px;
+    /* width: 915px; */
+	width: 855px;
     z-index: 99;
 }
 .activity_description {
@@ -164,7 +165,8 @@ html body {
     min-height: 217px;
     padding: 20px;
     position: absolute;
-    width: 202px;
+    /* width: 202px; */
+	width: 144px;
     z-index: 1000;
     top: 190px;
 }
@@ -175,7 +177,8 @@ html body {
     text-align: left;
 }
 #feedbackText {
-    width: 200px;
+    /* width: 200px; */
+	width: 142px;
     margin-top: -10px;
     min-height: 170px;
     max-height: 170px;
@@ -216,13 +219,13 @@ html body {
 }
 
 .captionBubble {
-	border: 1px solid #000000;
+    border: 1px solid #000000;
     background-color: white;
     
-	position: relative;
+    position: relative;
     height: 135px;
     margin: 3px;
-	width: 571px;
+    width: 571px;
 }
 
 #setDiv_container {
@@ -262,7 +265,7 @@ html body {
     height: 450px;
     position: absolute;
     width: 580px;
-	z-index: 1000;
+    z-index: 1000;
 }
 
 #playBtnAudio{
@@ -281,7 +284,8 @@ html body {
     position: absolute;
     text-align: center;
     top: 0px;
-    width: 245px;
+    /* width: 245px; */
+	width: 185px;
     height: 450px;
 }
 
@@ -386,8 +390,7 @@ div, span{
 	height: 26px;
 	width: 28px;
 	float: left;
-	color: green;
-	font-weight: bold;
+	color: red;
 }
 
 #conversationLinks {
@@ -525,7 +528,7 @@ div, span{
 
 #drop_img{
     height: 100%;
-    width: 100%;	
+    width: 100%;
 }
 
 #stage {
