--- a/Enabling_20_html/css/enabling_20.css
+++ b/Enabling_20_html/css/enabling_20.css
@@ -25,22 +25,23 @@
 }
 
 
-
 #enable20Div {
 	position:relative;
-	margin:15px auto 0px auto;
+	/* margin:0px auto 0px auto; */
+	margin:6px auto 6px auto;
 	padding:0px;
-	width:880px;
+	/* width:880px; */
+	width:850px;
 	 font-family: 'FuturaMedium';
 	
 	
-
+	overflow:hidden;
 }
 #contentPanel {
 	position:relative;
 	margin:0px;
 	padding:0px;
-	width:880px;
+	width:850px;
 
 	background: #f5f5f5; /* Old browsers */
 background: -moz-linear-gradient(top,  #f5f5f5 0%, #f5f5f5 100%); /* FF3.6+ */
@@ -65,7 +66,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 	position:relative;
 	margin:10px 0px 0px 0px;
 	padding:0px;
-	width:880px;
+	width:850px;
 	height:30px;
 	 font-family: 'FuturaMedium';
 }
@@ -75,7 +76,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', end
 	position:relative;
 	margin:10px 10px 10px 10px;
 	padding:0px;
-	width:860px;
+	width:830px;
 	height:411px;
 	 font-family: 'FuturaMedium';
 }
@@ -147,7 +148,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 	margin:0px ;
 	padding:5px 10px 0px 10px;
 	width:346px;
-	height:194px;
+	height:150px;
 	
 	border: solid thin #b8b8b8 !important;
 		border-radius: 3px;
@@ -173,7 +174,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 #hint {
 	position:absolute;
 		width:326px;
-	height:186px;
+	height:142px;
 	background: #fcfcfc !important; /* Old browsers */
 	background: -moz-linear-gradient(top,  #fcfcfc 0%, #fcfcfc 25%, #e6e6e6 100%) !important; /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(25%,#fcfcfc), color-stop(100%,#e6e6e6)) !important; /* Chrome,Safari4+ */
@@ -190,14 +191,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 	position:relative;
 	width:326px;
 	left:0px;
-	top:0px;
+	top:-2px;
 	
 }
 #hintBody {
 	position:relative;
 	width:326px;
 	left:0px;
-	top:5px;
+	top:-3px;
 	
 }
 #hintBottom {
@@ -205,13 +206,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 	left:278px;
 	width:30px;
 	height:30px;
-	top:149px;
+	top:110px;
 	
 }
 #transcript{
 	position:absolute;
 	width:326px;
-	height:186px;
+	height:142px;
 	background: #fcfcfc !important; /* Old browsers */
 	background: -moz-linear-gradient(top,  #fcfcfc 0%, #fcfcfc 25%, #e6e6e6 100%) !important; /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(25%,#fcfcfc), color-stop(100%,#e6e6e6)) !important; /* Chrome,Safari4+ */
@@ -242,7 +243,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 	position:relative;
 	margin:0px;
 	padding:0px;
-	width:502px;
+	width:470px;
 	float:left;
 	background-image:url(../images/board.png);
 	background-repeat:repeat;
@@ -296,7 +297,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', end
 }
 .choiceText {
 	position:relative;
-	 top: -22px;
+	 top: -25px;
 	 left:44px;
 	 	width:280px;
 		 font-family: 'FuturaMedium';
@@ -314,9 +315,9 @@ hr {
 }
 	label:before {
     display: inline-block;
-    height: 44px;
+    height: 38px;
     left: -2px;
-	top:10px;
+	top:0px;
     position: relative;
     width: 44px;
 	
@@ -324,7 +325,8 @@ hr {
 	label{
     position: relative;
     width: 44px;
-	height: 54px;
+	height: 38px;
+	margin:0px;
 }
 .note {
 	position:absolute;
@@ -360,4 +362,14 @@ hr {
     -moz-box-shadow: 0px 1px 2px #dcdcdc;
     -webkit-box-shadow: 0px 1px 2px #dcdcdc;
 	 font-family: 'FuturaMedium';
+}
+#setDiv {
+	cursor:default;
+	left: 0px;
+	z-index:5;
+	height: 30px;
+	background-color: white;
+	width: 40px;
+	position: relative;
+	top: 0px;
 }
