--- a/Enabling_21_html/css/enabling_21.css
+++ b/Enabling_21_html/css/enabling_21.css
@@ -33,7 +33,8 @@ body {background: #f5f5f5; }
 
 #enable21Div {
 	position:relative;
-	margin:0px auto 0px auto;
+	/* margin:0px auto 0px auto; */
+	margin:6px auto 6px auto;
 	padding:0px;
 	width:800px;
 
